# ab-test-api

./: .env_example  .gitignore  FastAPI.postman_collection.json  Makefile  README.md  database.sql  docker-compose.db.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml
ab_test_api/: __init__.py  app.py  counters.py  crud.py  database.py  db_connect.py  logic.py  main.py  migration.py  models.py  routing.py  settings.py
tests/: __init__.py  conftest.py  test_get_device.py
