[tool.poetry]
name = "ab-test-api"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "ab_test_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.12"
asyncpg = "^0.27.0"
alembic = "^1.10.4"
pydantic = "^1.10.7"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
